--- a/app/src/main/res/layout/layout_message_details_actions_sheet_header.xml
+++ b/app/src/main/res/layout/layout_message_details_actions_sheet_header.xml
@@ -48,30 +48,34 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/actionsSheetTitleTextView"
+        android:id="@+id/textview_actions_sheet_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:paddingTop="@dimen/padding_m"
+        android:paddingEnd="@dimen/padding_m"
         android:singleLine="true"
         android:textAppearance="@style/Text.Default.Bold"
-        app:layout_constraintBottom_toTopOf="@+id/actionsSheetSubTitleTextView"
+        app:layout_constraintBottom_toTopOf="@+id/textview_actions_sheet_subtitle"
         app:layout_constraintEnd_toStartOf="@+id/textview_actions_sheet_right_action"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry"
         tools:text="@tools:sample/lorem/random" />
 
     <TextView
-        android:id="@+id/actionsSheetSubTitleTextView"
+        android:id="@+id/textview_actions_sheet_subtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
+        android:paddingEnd="@dimen/padding_m"
         android:paddingBottom="@dimen/padding_m"
         android:singleLine="true"
         android:textAppearance="@style/Text.Caption.Weak"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textview_actions_sheet_right_action"
         app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="RtlSymmetry"
         tools:text="@tools:sample/lorem/random"
         tools:visibility="visible" />
 
@@ -81,15 +85,19 @@
         style="@style/Text.DefaultSmall.Interaction"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
         android:paddingStart="@dimen/padding_l"
         android:paddingTop="@dimen/padding_l"
         android:paddingBottom="@dimen/padding_m"
+        android:text="@string/done"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.533"
         tools:ignore="RtlSymmetry"
-        tools:text="@string/done"
         tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
