Updated details action sheet folowing desing changes, added more start sheet arguments.
MAILAND-1401

--- a/app/src/main/res/drawable/ic_header_info.xml
+++ b/app/src/main/res/drawable/ic_header_info.xml
@@ -20,10 +20,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="16"
-    android:viewportHeight="16">
-    <path
-        android:fillColor="#17181C"
-        android:fillType="evenOdd"
-        android:pathData="M4.732,1L3.866,1.5L6.0025,5.2005L6.6081,6.2494L10.1103,12.3154L11.0352,13.9174L11.866,15.3564L12.7321,14.8564L12.2755,14.0657L11.54,9.7499L15.07,6.2999L10.19,5.5899L8,1.1599L6.5352,4.1231L4.732,1ZM7.1393,5.1695L10.7946,11.5007L10.46,9.3999L12.93,6.9999L9.52,6.5099L8,3.4199L7.1393,5.1695ZM0.93,6.2999L5.1298,5.6889L5.6709,6.6262L3.07,6.9999L5.54,9.3999L5,12.7899L8,11.1899L8.4419,11.4256L9.3765,13.0444L8,12.3199L3.63,14.6199L4.46,9.7499L0.93,6.2999Z" />
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M21,3V1.5L3,1.5L3,3L21,3ZM3,21V3H4.5V21H19.5V3H21V21V22.5L3,22.5L3,21ZM18,7.5V6L9,6V7.5L18,7.5ZM7.5,6V7.5H6V6H7.5ZM15,12V10.5H6V12L15,12ZM10.5,16.5V18H6V16.5H10.5ZM18,15V13.5L6,13.5V15L18,15Z"
+      android:fillColor="#17181C"
+      android:fillType="evenOdd"/>
 </vector>
