--- a/app/src/main/res/drawable/ic_envelope_read.xml
+++ b/app/src/main/res/drawable/ic_envelope_read.xml
@@ -24,6 +24,12 @@
     android:viewportHeight="16">
     <path
         android:fillColor="#17181C"
+        android:pathData="M5,5H8V6H5V5Z" />
+    <path
+        android:fillColor="#17181C"
+        android:pathData="M11,8V7H5V8H11Z" />
+    <path
+        android:fillColor="#17181C"
         android:fillType="evenOdd"
-        android:pathData="M4.732,1L3.866,1.5L6.0025,5.2005L6.6081,6.2494L10.1103,12.3154L11.0352,13.9174L11.866,15.3564L12.7321,14.8564L12.2755,14.0657L11.54,9.7499L15.07,6.2999L10.19,5.5899L8,1.1599L6.5352,4.1231L4.732,1ZM7.1393,5.1695L10.7946,11.5007L10.46,9.3999L12.93,6.9999L9.52,6.5099L8,3.4199L7.1393,5.1695ZM0.93,6.2999L5.1298,5.6889L5.6709,6.6262L3.07,6.9999L5.54,9.3999L5,12.7899L8,11.1899L8.4419,11.4256L9.3765,13.0444L8,12.3199L3.63,14.6199L4.46,9.7499L0.93,6.2999Z" />
+        android:pathData="M14,3V6.29L15,7.29V15H1V7.29L2,6.29V3H5.34L8,0.45L10.66,3H14ZM9.22,3L8,1.84L6.78,3H9.22ZM13,4V7.61L8,10.35L3,7.61V4H13ZM2,8.2V14H14V8.2L8,11.5L2,8.2Z" />
 </vector>
