--- a/app/src/main/res/layout/fragment_message_details_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_details_action_sheet.xml
@@ -18,6 +18,7 @@
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -49,12 +50,45 @@
                 layout="@layout/layout_message_details_actions_sheet_buttons" />
 
             <TextView
-                android:id="@+id/text_view_details_actions_star_unstar"
+                android:id="@+id/text_view_details_actions_star"
                 style="@style/ActionSheetStandardItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/star_unstar"
-                app:drawableStartCompat="@drawable/ic_star_24dp" />
+                android:text="@string/star"
+                android:visibility="gone"
+                app:drawableStartCompat="@drawable/ic_star_24dp"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/text_view_details_actions_unstar"
+                style="@style/ActionSheetStandardItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/unstar"
+                android:visibility="gone"
+                app:drawableStartCompat="@drawable/ic_star_remove"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/text_view_details_actions_mark_unread"
+                style="@style/ActionSheetStandardItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/mark_as_unread"
+                android:visibility="gone"
+                app:drawableStartCompat="@drawable/ic_envelope_dot"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/text_view_details_actions_mark_read"
+                style="@style/ActionSheetStandardItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/mark_as_read"
+                android:visibility="gone"
+                app:drawableStartCompat="@drawable/ic_envelope_read"
+                tools:visibility="visible" />
+
 
             <TextView
                 android:id="@+id/text_view_details_actions_trash"
@@ -63,6 +97,16 @@
                 android:layout_height="wrap_content"
                 android:text="@string/trash"
                 app:drawableStartCompat="@drawable/ic_trash_24dp" />
+
+            <TextView
+                android:id="@+id/text_view_details_actions_move_to_inbox"
+                style="@style/ActionSheetStandardItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/move_to_inbox"
+                android:visibility="gone"
+                app:drawableStartCompat="@drawable/ic_inbox_24dp"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/text_view_details_actions_move_to_archive"
@@ -118,7 +162,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/view_headers"
-                app:drawableStartCompat="@drawable/ic_code" />
+                app:drawableStartCompat="@drawable/ic_header_info" />
 
             <TextView
                 android:id="@+id/text_view_details_actions_report_phishing"
