--- a/app/src/main/res/layout/view_action_sheet_header.xml
+++ b/app/src/main/res/layout/view_action_sheet_header.xml
@@ -23,9 +23,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
-    tools:paddingStart="@dimen/padding_l"
-    tools:paddingEnd="@dimen/padding_l"
     tools:paddingBottom="@dimen/padding_xs"
+    tools:paddingEnd="@dimen/padding_l"
+    tools:paddingStart="@dimen/padding_l"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <ImageView
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:paddingTop="@dimen/padding_m"
-        android:paddingEnd="@dimen/padding_m"
+        android:paddingEnd="@dimen/padding_xl"
         android:singleLine="true"
         android:textAppearance="@style/Text.Default.Bold"
         app:layout_constraintBottom_toTopOf="@+id/textview_action_sheet_subtitle"
@@ -65,20 +65,20 @@
 
     <TextView
         android:id="@+id/textview_action_sheet_subtitle"
+        style="@style/Text.Caption.Weak"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:paddingEnd="@dimen/padding_m"
         android:paddingBottom="@dimen/padding_m"
         android:singleLine="true"
-        android:textAppearance="@style/Text.Caption.Weak"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textview_actions_sheet_right_action"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="RtlSymmetry"
         tools:text="@tools:sample/lorem/random"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textview_actions_sheet_right_action"
