Add missing Taqbaylit

--- a/app/src/main/res/values/cnfg.xml
+++ b/app/src/main/res/values/cnfg.xml
@@ -49,6 +49,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         <item>bahasa Indonesia</item>
         <item>íslenska</item>
         <item>Italiano</item>
+        <item>Taqbaylit</item>
         <item>日本語</item>
         <item>Dutch</item>
         <item>Polski</item>
@@ -75,6 +76,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         <item>in</item>
         <item>is_IS</item>
         <item>it</item>
+        <item>kab</item>
         <item>ja</item>
         <item>nl</item>
         <item>pl</item>
