Added Kabyle, see issue on CrowdIn

--- a/app/src/main/res/values/cnfg.xml
+++ b/app/src/main/res/values/cnfg.xml
@@ -50,6 +50,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         <item>íslenska</item>
         <item>Italiano</item>
         <item>日本語</item>
+        <item>Izwawen</item>
         <item>Dutch</item>
         <item>Polski</item>
         <item>Português</item>
@@ -76,6 +77,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         <item>is_IS</item>
         <item>it</item>
         <item>ja</item>
+        <item>kab</item>
         <item>nl</item>
         <item>pl</item>
         <item>pt</item>
