Implement getConversation method in conversation repository
- Add method in Conversations Repository that will allow us to get the conversation with it's messages from the Remote or Local source.
- Add a way to save the messages into the Message Table
- Add API call to get conversation with it's messages

MAILAND-1766

--- a/app/src/main/res/layout/activity_message_details.xml
+++ b/app/src/main/res/layout/activity_message_details.xml
@@ -24,7 +24,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activities.messageDetails.MessageDetailsActivity">
+    tools:context=".details.presentation.MessageDetailsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
