--- a/app/src/main/res/layout/fragment_message_details_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_details_action_sheet.xml
@@ -42,7 +42,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="@dimen/padding_m"
             android:paddingBottom="@dimen/padding_l">
 
             <include
@@ -159,9 +158,12 @@
                 android:text="@string/move_to"
                 app:drawableStartCompat="@drawable/ic_move_to" />
 
-            <View style="@style/ViewSeparatorHorizontal" />
+            <View
+                android:id="@+id/view_action_sheet_separator"
+                style="@style/ViewSeparatorHorizontal" />
 
             <TextView
+                android:id="@+id/text_view_action_sheet_more_title"
                 style="@style/ActionSheetSectionTitleItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
