--- a/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
+++ b/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
@@ -19,6 +19,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_details_actions"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/padding_m">
