--- a/app/src/main/res/layout/fragment_manage_labels_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_manage_labels_action_sheet.xml
@@ -24,7 +24,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ch.protonmail.android.activities.messageDetails.ActionSheetHeader
+    <ch.protonmail.android.activities.messageDetails.actionsheet.ActionSheetHeader
         android:id="@+id/action_sheet_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
