Move MultiLineLabelChipGroupView.kt RecyclerView's id to resources

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -19,6 +19,8 @@
   -->
 <resources>
 
+    <item name="multi_line_label_recycler_view" type="id"/>
+
     <item name="monday" type="id"/>
     <item name="tuesday" type="id"/>
     <item name="wednesday" type="id"/>
